--- a/clue-2.html
+++ b/clue-2.html
@@ -486,5 +486,8 @@
             }
         });
     </script>
+    <div style="margin-top: 30px;">
+        <a href="./1CLUE-3.html " style="padding: 10px 20px; background: #007bff; color: #fff; text-decoration: none; border-radius: 5px;">Next Clue</a>
+    </div>
 </body>
 </html>
