--- a/first-clue.html
+++ b/first-clue.html
@@ -451,5 +451,8 @@
         console.log('%c💀 This console will become your survival tool in later levels...', 'color: #ff0066;');
         console.log('%c══════════════════════════════════════════════════════════', 'color: #00ff41;');
     </script>
+    <div style="margin-top: 30px;">
+        <a href="./1Clue-2.html" style="padding: 10px 20px; background: #007bff; color: #fff; text-decoration: none; border-radius: 5px;">Next Clue</a>
+    </div>
 </body>
 </html>
